How to run modules with ordinary JAR